# llms_know_difficulty

./: .gitattributes  .gitignore  CHANGES_SUMMARY.md  CITATION.cff  CITATIONS.md  README.md  conda_env.yml  data_utils.py  label_with_probe.sh  language_sweep.sh  pika.yml  pyproject.toml  run_difficulty_direction.sh  run_difficulty_direction_checkpoint_basic.sh  run_flexible_probe_sweep.sh  run_gpt_oss_sweep.sh  run_probe_sweep.sh  run_qwen_coder_sweep.sh  run_src.bash  run_success_rate_script.sh  setup.sh  src_conda_env.yml  test_metrics_integration.py  train_probes_all_splits.sh
config/: config.yaml
config/dataset/: DigitalLearningGmbH_MATH-lighteval-Qwen2.5-1.5B-Instruct.yaml  dataset_default.yaml
config/experiments/: attn_probe_qwen_math_experiment.yaml
config/logger/: wandb_logger.yaml
config/probe/: attn_probe.yaml  layer_attn_probe.yaml  linear_eoi_probe.yaml  linear_then_max_probe.yaml  linear_then_rolling_max_probe.yaml  linear_then_softmax_probe.yaml  sigmoid_attn_probe.yaml  tfidf_probe.yaml  torch_probe_default.yaml
create_sr_datasets/: create_code_pareto_sr_datasets.py  create_pareto_sr_datasets.py  recreate_lcb_success_rate_datasets.py  slurm_launch.py
create_sr_datasets/utils/: __init__.py  code_sandbox_verification.py  my_utils.py  text_number_dataset.py  verification_math.py
difficulty_direction/: LOCAL_DATASETS_README.md  analyze_checkpoint_evolution.py  bert_difficulty_prediction_code.ipynb  bert_difficulty_prediction_gsm8k.ipynb  config.py  generate_dataset_configs.py  get_directions.py  get_directions_store_preds.py  ignore_this_environment.yml  llm_difficulty_judge.ipynb  probe_environment.yml  run.py  sanity_check_data_loader.ipynb  visualize_layer_checkpoint_heatmap.py  visualize_layer_checkpoint_heatmap.py.backup
difficulty_direction/dataset/: load_dataset.py
difficulty_direction/eval/: math_eval.py
difficulty_direction/model_wrapper/: deepseek_qwen.py  gemma_3.py  gpt_neox.py  list.py  olmo.py  openhands.py  qwen3.py  swe_agent.py
difficulty_probes/: README.md  extract_activations.sh
difficulty_probes/notebooks/: analyse_probe.ipynb  code_dataset_check.ipynb  sanity_checks.ipynb
difficulty_probes/scripts/: extract_activations.py  label_data_with_probe.py  train_probe.py
hard_rl/: grpo_MATH.sh  grpo_MATH_custom.sh  grpo_MATH_refined_sweep.sh  grpo_MATH_refined_sweep_auto_resume.sh  grpo_loop.sh  training_environment.yml
notebooks/: agentic_solver_skeletion.ipynb  analyse_sc_approach.ipynb  bert_difficulty_prediction.ipynb  bert_llm_success_prediction.ipynb  cascade.ipynb  evaluate_sr_preds.ipynb  hf_demo.ipynb  merging_sr_datasets.ipynb  mirt_baseline_router_imp.ipynb  pika_router_analysis.ipynb  results.ipynb  router_components.py  router_self_consistency_eval.ipynb  router_self_consistency_script.py  router_utils.py  sanity_check_vllm_rollouts.ipynb  self_consistency.ipynb  self_consistency_binary_case.ipynb  solve_questions_router.ipynb  solve_questions_router_new.ipynb  sr_dataset_prep.ipynb  survey_probe_predictions.ipynb  test_probe_library.ipynb  token_cost_analysis.ipynb  utility_router.ipynb  utils.py
old_codebase/: README.md  run_complete_checkpoint_analysis.sh  run_layer_checkpoint_heatmap.sh  run_learnability_difficulty.sh
old_codebase/difficulty_direction/: EXAMPLE_ADD_LOCAL_DATASET.py  get_directions_store_preds.py  run.py  train_checkpoint_probes.py  utils.py  visualize_checkpoint_evolution.py
old_codebase/notebooks/: evaluate_sr_preds.ipynb  prep_llm_sandbox.ipynb  router_self_consistency_eval.ipynb  router_self_consistency_script.py.backup  sr_dataset_prep.ipynb  token_cost_analysis.ipynb  utils.py
old_codebase/predicting_learnability/: PIKA_router.py  PIKA_router_flexible_k.py
old_codebase/router_code/: PIKA_cascade.py  serve_models.sh  test_cascade_parser.py
older_scripts/: run_probe_sweep.sh  run_src.bash  train_probes_all_splits.sh
original_probe_scripts/: language_sweep.sh
predicting_learnability/: PIKA_router.py  SMART_router.py  create_success_rate_dataset.py  create_success_rate_parallel_ds.py  evaluate_sr_preds copy.ipynb  evaluate_sr_preds.ipynb  rollout.ipynb  rollout_success_rate_parallel.py  rollout_success_rate_parallel_checkpoint.py  router_components.py  router_self_consistency_script.py  sample_aime.json  sanity_check_rollouts.ipynb  utils.py
router_code/: PIKA_cascade.py  PIKA_router_v2.py  create_pareto_baselines.ipynb  create_pareto_comparisons.ipynb  execute_strategies.py  routing_strategies.py  run_PIKA_router_self_consistency.py  run_learned_PIKA_router.py  scaffold.ipynb  sweep_router.py  test_cascade_parser_standalone.py
router_code/CLAUDE_CONTEXT/: CASCADE_EXECUTOR_DESIGN.md  CHECKLIST.md  DELIVERABLES.md  EXAMPLES.py  EXECUTIVE_SUMMARY.md  EXECUTOR_CHANGES_DETAIL.md  EXECUTOR_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  QUICK_START_GUIDE.md  README_ARCHITECTURE.md  README_WORKFLOW.md
router_code/notebooks/: compare_all_routers.ipynb  create_pareto_baselines.ipynb  create_pareto_comparisons.ipynb  create_routers.ipynb  evaluate_theoretical_router.ipynb  probe_transfer_predict_sr.ipynb  route_calibrated_datasets.ipynb  route_calibrated_script.py  routing_script.py  sanity_check_strategy.ipynb  (+1 more)
scripts/: DATASET_README_TEMPLATE.md  prepare_hf_probes.py  prepare_initial_probes.py  upload_math_dataset.py  upload_readme_only.py  upload_to_hf.py
src/: Will_L_env_yml.yml  probe_test_runner.sh
thom_replication/: __init__.py  add_prompts_to_dataset.py  cache_activations.py  create_code_pareto_sr_datasets.py  create_pareto_sr_datasets.py  create_pareto_sr_datasets_og.py  create_pareto_train_sr_datasets.py  create_success_rate_datasets.py  create_success_rate_datasets_greedy.py  language_probe_analysis.ipynb  predict_success_rate.py  predict_success_rate_with_probe.py  predict_success_rate_with_regression_head.py  run.sh  run_attn.sh  simple_routing_demo.py  slurm_launch.py  verify_code_generations_offline.py
will_replication/: .nfs000000000ffca7de00004be3  ALPHA_SELECTION.md  run.sh  run_loop.sh  sweep_models.sh  sweep_samples.sh  train_probes.sh
(+292 files in other folders)
