[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-know-difficulty"
version = "0.1.0"
description = "LLMs Know Difficulty - Attention probe for predicting task difficulty"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LLMs Know Difficulty Team"}
]


dependencies = [
    "torch==2.9.1",
    "transformers==4.49.0",
    "einops==0.8.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "pyarrow==22.0.0",
    "accelerate==1.4.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.13.2",
    "anyio==4.12.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "bitsandbytes==0.49.0",
    "black==25.12.0",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.2.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coverage==7.13.0",
    "cycler==0.12.1",
    "datasets==4.4.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "deepspeed==0.18.3",
    "dill==0.4.0",
    "dotenv==0.9.9",
    "executing==2.2.1",
    "filelock==3.20.1",
    "flake8==7.3.0",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "gdown==5.2.0",
    "git-lfs==1.6",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-api-core==2.28.1",
    "google-api-python-client==2.187.0",
    "google-auth==2.41.1",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.2.3",
    "googleapis-common-protos==1.72.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jaxtyping==0.3.4",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "latex2sympy2-extended==1.10.2",
    "librt==0.7.4",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "math-verify==0.8.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "ninja==1.13.0",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "peft==0.15.1",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "proto-plus==1.27.0",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.14.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pysocks==1.7.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.2.0",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.48.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.8.1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.21.4",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.5.1",
    "trl==0.17.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
    "urllib3==2.6.2",
    "wadler-lindig==0.1.7",
    "wandb==0.23.1",
    "wcwidth==0.2.14",
    "xxhash==3.6.0",
    "yarl==1.22.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


