[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pika"
version = "0.1.0"
description = "PIKA — Probe-Informed Knowledge-Aware routing and difficulty prediction"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PIKA Team"}
]

# ---------------------------------------------------------------------------
# Only *direct* runtime imports of the package are listed here.
# Transitive / build / CUDA deps are handled by the conda environment.
# Use flexible lower-bounds so the package installs inside the conda env.
# ---------------------------------------------------------------------------
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "einops>=0.7",
    "numpy>=2.0,<2.3",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "spacy>=3.7",
    "pydantic>=2.0",
    "joblib>=1.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
# Heavy inference dependency — install only when prompting baseline is needed
vllm = ["vllm>=0.4"]

# Development / testing extras
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "coverage>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
