[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pika-router"
version = "0.1.0"
description = "PIKA — Probe-Informed Knowledge-Aware LLM routing for optimal cost-accuracy tradeoffs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PIKA Team"}
]
keywords = ["llm", "routing", "probe", "inference", "cost-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ---------------------------------------------------------------------------
# Only *direct* runtime imports of the package are listed here.
# Transitive / build / CUDA deps are handled by the conda environment.
# Use flexible lower-bounds so the package installs inside the conda env.
# ---------------------------------------------------------------------------
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "einops>=0.7",
    "numpy>=2.0,<2.3",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "spacy>=3.7",
    "pydantic>=2.0",
    "joblib>=1.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
# vLLM for high-throughput inference (required for router.generate())
vllm = ["vllm>=0.4"]

# Full router functionality with vLLM
router = ["vllm>=0.4"]

# Development / testing extras
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "coverage>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
